--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body style="margin: 0; height:100%; width: 100%; display:flex; flex-direction: column; justify-content: center; align-items: center;">
-    <div id="mapContainer" style="height:80%; width:80%; border: 10px solid black; overflow: hidden;">
-        <div id="map" style="height: 100%; width: 100%; display: flex;justify-content: center; align-items: center;">
-            asfasfasdaiuwhdiauwhdiuh
+    <div id="mapContainer" style="height:80%; width:80%; border: 10px solid black; overflow: hidden; background-color: blue; position: relative">
+        <div id="map" style="position:absolute;">
+            Loading
         </div>
     </div>
 </body>
