--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="index.css">
     <script type="module" src="index.js"></script>
+    <link rel="shortcut icon" href="GreenHex.png">
     <title>Hex Game!</title>
 </head>
 
