--- a/index.html
+++ b/index.html
@@ -9,12 +9,24 @@
     <title>Hex Game!</title>
 </head>
 
-<body style="margin: 0; height:100%; width: 100%; display:flex; flex-direction: column; justify-content: center; align-items: center;">
-    <div id="mapContainer" style="height:100%; width:80%; border: 10px solid black; overflow: hidden; background-color: black; position: relative">
+<body style="margin: 0; height:100%; width: 100%; display:flex; flex-direction: row; justify-content: center; align-items: center;">
+    <div class="menu">
+        <div class="tabFolder">
+        </div>
+        <div class="tabFolder">
+        </div>
+    </div>
+    <div id="mapContainer">
         <div id="scrollContainer" style="height:100%; width: 100%; position: absolute">
             <div id="map" style="position:absolute;">
                 Loading
             </div>
+        </div>
+    </div>
+    <div class="menu">
+        <div class="tabFolder">
+        </div>
+        <div class="tabFolder">
         </div>
     </div>
 </body>
